# api-pueblo-madera

./: .gitignore  Dockerfile  README.md  create_admin.py  create_arquitect.py  create_test_user.py  main.py  pyproject.toml  session.py
api/v1/routes/: auth.py  clientes.py  eventos.py  facturas.py  materiales.py  movimientos.py  muebles.py  pagos.py  planos.py  productos.py  proyectos.py  solicitudes.py  supervisiones.py  tareas.py  usuarios.py
core/: loggin.py  security.py
models/: __init__.py  cliente.py  evento_calendario.py  factura.py  inventario.py  material.py  movimiento_inventario.py  mueble.py  pago.py  plano.py  producto.py  proyecto.py  solicitud_material.py  supervision.py  tarea.py  usuario.py
repositories/: cliente_repository.py  evento_repository.py  factura_repository.py  material_repository.py  movimiento_repository.py  mueble_repository.py  plano_repository.py  producto_repository.py  proyecto_repository.py  solicitud_repository.py  supervision_repository.py  tarea_repository.py  user_repository.py  usuario_repository.py
schemas/: cliente.py  evento.py  factura.py  inventario.py  material.py  movimiento.py  mueble.py  plano.py  producto.py  proyecto.py  solicitud.py  supervision.py  tarea.py  usuario.py
scripts/: alter_mueble.py  check_db.py  check_tables.py  ensure_comuna.py  force_add_and_list.py  upgrade_db.py
services/: user_service.py
